# jinjitsu

./: LICENSE  README.md  pyproject.toml
docs/design/: 2025-09-23-jinjitsu-cli.md
src/jinjitsu/: __init__.py  __main__.py
tests/: test_cli.py
