[project]
name = "jinjitsu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vagiz Duseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
]

[project.scripts]
jinjitsu = "jinjitsu:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
