[project]
name = "jinjitsu"
version = "0.1.1"
description = "Jinja CLI with all features"
readme = "README.md"
authors = [
    { name = "Vagiz Duseev", email = "vagiz@duseev.com" }
]
maintainers = [
    { name = "Vagiz Duseev", email = "vagiz@duseev.com" }
]
license-files = ["LICENSE"]

keywords = ["jinja2", "cli", "features", "include"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing"
]

requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
]

[project.urls]
"Homepage" = "https://github.com/vduseev/jinjitsu"
"Documentation" = "https://github.com/vduseev/jinjitsu"
"Repository" = "https://github.com/vduseev/jinjitsu"
"Issues" = "https://github.com/vduseev/jinjitsu/issues"

[project.scripts]
jinjitsu = "jinjitsu:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
